# ClockApp1

./: CMakeLists.txt  CMakePresets.json  License.txt  README.md  filePaths.h.in  paths.h.in
ClockApp1/: CMakeLists.txt  ClockApp1.cpp  ClockApp1.h
TimerApp/: CMakeLists.txt  TimerApp.cpp  glad.c
TimerAppLib/: CMakeLists.txt  TimerAppLib.cpp  TimerAppLib.h  Widgets.cpp  Widgets.h
b1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  ClockApp1.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  filePaths.h
b1/TimerApp/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TimerApp.vcxproj  TimerApp.vcxproj.filters  cmake_install.cmake
b1/TimerAppLib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TimerAppLib.vcxproj  TimerAppLib.vcxproj.filters  cmake_install.cmake
b1/freetype/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
b1/glfw-3.4/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
b1/glfw-3.4/docs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
b1/glfw-3.4/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
deps1/: Shaderh.h
deps1/Shaders/: TimerClockFragment1.txt  TimerClockVertex1.txt  buttonShaderVertex.txt  textShaderFragment.txt  textShaderVertex.txt
deps1/glad/: glad.h
fileDetLib/: CMakeLists.txt  fileDet.cpp  fileDet.h
freetype/: CMakeLists.txt
